--- a/FastHttpPostReceiver/FastHttpPostReceiver.csproj
+++ b/FastHttpPostReceiver/FastHttpPostReceiver.csproj
@@ -15,4 +15,11 @@
     <RepositoryType>GIT</RepositoryType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Nerdbank.GitVersioning" Version="3.1.74">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
